# fellowship-solana

ex01/: README.md  go.mod  go.sum  main.go  readme.md
ex02/: README.md  config-overrides.js  package-lock.json  package.json  tailwind.config.js  webpack.config.js
ex02/src/: App.js  manager.js
ex03/solana_program/: Anchor.toml  package-lock.json
ex04/solana_program/: Anchor.toml
ex04/solana_program/programs/solana_program/: Cargo.toml
ex04/solana_program/tests/: solana_program.ts
ex05/: contract.md  readme.md
ex06/: package-lock.json  package.json
ex06/src/: App.js
ex07/: app.json  package.json
ex08/: readme.md
ex08/big_f/go/: constants.go  go.mod  go.sum  main.go
ex08/big_f/go/bubblegum/: Burn.go  Burn_test.go  CancelRedeem.go  CancelRedeem_test.go  CreateTree.go  CreateTree_test.go  DecompressV1.go  DecompressV1_test.go  Delegate.go  Delegate_test.go  MintToCollectionV1.go  MintToCollectionV1_test.go  MintV1.go  MintV1_test.go  Redeem.go  Redeem_test.go  SetAndVerifyCollection.go  SetAndVerifyCollection_test.go  SetDecompressibleState.go  SetDecompressibleState_test.go  SetTreeDelegate.go  SetTreeDelegate_test.go  Transfer.go  Transfer_test.go  UnverifyCollection.go  UnverifyCollection_test.go  UnverifyCreator.go  UnverifyCreator_test.go  UpdateMetadata.go  UpdateMetadata_test.go  VerifyCollection.go  VerifyCollection_test.go  VerifyCreator.go  VerifyCreator_test.go  accounts.go  instructions.go  (+2 more)
ex08/big_f/rust/: Cargo.toml
ex08/big_f/rust/src/: airdrop.rs  airdrop.txt  main.rs
ex08/ts/: index.ts  package-lock.json  package.json  readme.md
(+2 files in other folders)
